# graphrag-rs

./: Cargo.toml  HOW_IT_WORKS.md  README.md
.githooks/: pre-push
.github/workflows/: ci.yml
examples/sales-transcripts-demo/: .gitignore  Cargo.toml  README.md
examples/sales-transcripts-demo/configs/: sales_hash_only.json5  sales_ollama.json5
examples/sales-transcripts-demo/src/: lib.rs
examples/sales-transcripts-demo/tests/: pipeline_smoke.rs
examples/sales-transcripts-demo/tests/fixtures/sample_transcripts/: transcript_0001.txt  transcript_0002.txt  transcript_0003.txt  transcript_0004.txt  transcript_0005.txt  transcript_0006.txt
graphrag-cli/: README.md
graphrag-cli/src/: app.rs  lib.rs  mode.rs  query_history.rs  theme.rs  tui.rs  workspace.rs
graphrag-cli/src/handlers/: file_ops.rs  graphrag.rs
graphrag-cli/src/ui/: markdown.rs
graphrag-core/: Cargo.toml  LEIDEN_INTEGRATION.md  PIPELINE_ARCHITECTURE.md  README.md
graphrag-core/benches/: advanced_features_benchmark.rs
graphrag-core/examples/: advanced_nlp_demo.rs  complete_zero_cost_graphrag_demo.rs  hierarchical_graphrag_demo.rs  llm_evaluation_demo.rs  tom_sawyer_workspace.rs  workspace_demo.rs
graphrag-core/src/: async_graphrag.rs  inference.rs  lib.rs
graphrag-core/src/api/: handlers.rs  mod.rs  rest.rs
graphrag-core/src/async_processing/: monitoring.rs  rate_limiting.rs
graphrag-core/src/builder/: mod.rs
graphrag-core/src/caching/: cache_key.rs  client.rs  distributed.rs  mod.rs
graphrag-core/src/config/: loader.rs  mod.rs  setconfig.rs
graphrag-core/src/core/: backend.rs  entity_adapters.rs  mod.rs  registry.rs  test_utils.rs  traits.rs
graphrag-core/src/embeddings/: api_providers.rs  factory.rs  mod.rs
graphrag-core/src/entity/: element_summary.rs  gleaning_extractor.rs  gliner_extractor.rs  llm_extractor.rs  llm_relationship_extractor.rs  mod.rs  prompts.rs  semantic_merging.rs  string_similarity_linker.rs
graphrag-core/src/evaluation/: mod.rs  pipeline_validation.rs
graphrag-core/src/function_calling/: enhanced_registry.rs  functions.rs
graphrag-core/src/generation/: async_mock_llm.rs  mod.rs
graphrag-core/src/graph/: analytics.rs  incremental.rs  leiden.rs  mod.rs  pagerank.rs  temporal.rs  traversal.rs
graphrag-core/src/incremental/: async_batch.rs  delta_computation.rs  lazy_propagation.rs  mod.rs
graphrag-core/src/lightrag/: graph_indexer.rs
graphrag-core/src/monitoring/: benchmark.rs  metrics_collector.rs
graphrag-core/src/nlp/: custom_ner.rs  mod.rs
graphrag-core/src/ollama/: mod.rs
graphrag-core/src/optimization/: graph_weight_optimizer.rs
graphrag-core/src/persistence/: parquet.rs  workspace.rs
graphrag-core/src/reranking/: cross_encoder.rs
graphrag-core/src/retrieval/: adaptive.rs  bm25.rs  enriched.rs  hybrid.rs  local_search.rs  mod.rs  pagerank_retrieval.rs  symbolic_anchoring.rs
graphrag-core/src/rograg/: fuzzy_matcher.rs  intent_classifier.rs  logic_form.rs  mod.rs  processor.rs  quality_metrics.rs  streaming.rs  validator.rs
graphrag-core/tests/: advanced_features_integration.rs  embeddings_concurrent_blocking.rs  incremental_integration.rs  nan_safe_sort.rs  ollama_concurrent_blocking.rs  ollama_enhancements.rs  registry_and_embedder_factory.rs  triple_validation_tests.rs  utf8_safe_truncation.rs
graphrag-server/: Cargo.toml  README.md
graphrag-server/src/: auth.rs  config_endpoints.rs  config_handler.rs  distributed_cache.rs  embeddings.rs  handlers.rs  lib.rs  main.rs  main_axum_old.rs  main_backup.rs  models.rs  observability.rs  qdrant_store.rs  validation.rs
graphrag-wasm/src/: entity_extractor.rs  lib.rs  vector_search.rs  webllm.rs
(+28 files in other folders)
